使用URI解析syslog url